<resources>
    <string name="app_name">TPMS Monitor</string>
    <string name="str_bar">bar</string>
    <string name="str_celsius">°C</string>
    <string name="str_volt">V</string>
    <string name="service_running">Service running</string>
    <string name="str_empty_value">- -</string>
    <string name="sensor_id">Sensor ID:</string>
    <string name="start_auto_bind">START AUTO BIND</string>
    <string name="stop_auto_bind">STOP AUTO BIND</string>
    <string name="start_auto_bind_all">START AUTO BIND ALL</string>
    <string name="stop_auto_bind_all">STOP AUTO BIND ALL</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_bind">Sensors binding</string>
    <string name="websocket_settings">WebSocket settings</string>
    <string name="ip_address">IP address</string>
    <string name="ping_interval">Ping interval</string>
    <string name="tire_settings">Tire settings</string>
    <string name="type_tires">Type of tires</string>
    <string name="maximum_pressure_front_tire">Maximum pressure in the front tires</string>
    <string name="minimum_pressure_front_tire">Minimum pressure in the front tires</string>
    <string name="maximum_pressure_rear_tire">Maximum pressure in the rear tires</string>
    <string name="minimum_pressure_rear_tire">Minimum pressure in the rear tires</string>
    <string name="maximum_temperature_tire">Maximum temperature in the tires</string>
    <string name="data_timeout">Data timeout</string>
    <string name="front_left">front left</string>
    <string name="front_right">front right</string>
    <string name="rear_left">rear left</string>
    <string name="rear_right">rear right</string>
    <string name="leak_detected">Leak detected in the %1$s tire</string>
    <string name="lower_pressure">Pressure in the %1$s tire is below normal</string>
    <string name="higher_pressure">Pressure in the %1$s tire is above normal</string>
    <string name="higher_temperature">Temperature in the %1$s tire is above normal</string>

    <string-array name="list_type_tires_name">
        <item>Summer</item>
        <item>Winter</item>
        <item>All season</item>
    </string-array>

    <string-array name="list_type_tires_value">
        <item>summer</item>
        <item>winter</item>
        <item>all_season</item>
    </string-array>
    <string name="system_connected">System connected</string>
    <string name="reconnect">Reconnect to WebSocket</string>

</resources>
